PyTorch training loop

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMAczCYMIVcZjPAbqXMHP/u",
+      "authorship_tag": "ABX9TyPYbvaVIauufKm8YhqxWsi7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,9 +65,9 @@
           "height": 35
         },
         "id": "q5d0xdVfz8rK",
-        "outputId": "9f9a603c-bee9-4746-9455-5a1daef01807"
+        "outputId": "6117d450-2b4b-47a8-de43-79b60182f318"
       },
-      "execution_count": 1,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 21
         }
       ]
     },
@@ -123,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vumodyco1mzU",
-        "outputId": "47f5f577-5f53-4545-991c-164738a073ec"
+        "outputId": "e1e19883-1de7-4b0d-8f3d-c4dec7921ec3"
       },
-      "execution_count": 2,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 22
         }
       ]
     },
@@ -168,9 +168,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLWAPGlp7N5Q",
-        "outputId": "eb75f896-20d2-4976-8c81-878b5f3e538d"
+        "outputId": "5472b831-531b-4702-dc64-6d5218852777"
       },
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 23
         }
       ]
     },
@@ -200,9 +200,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7c289e7a-9588-4702-cc57-f2097ee5358c"
+        "outputId": "6e4f8910-c850-4aa3-8a67-0a12f3de4c4c"
       },
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 24
         }
       ]
     },
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 599
         },
-        "outputId": "c78cf938-b1ca-4df3-c1fd-c03a65a21ba7"
+        "outputId": "72c50c85-9211-4d83-8273-b9e5f0a42faa"
       },
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "display_data",
@@ -299,7 +299,7 @@
       "metadata": {
         "id": "GGSHzSEqzsmV"
       },
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -371,9 +371,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mvty8noPMPlj",
-        "outputId": "70d419d5-4b52-46e1-a6ec-62a3e5c41776"
+        "outputId": "8ef9bb5c-bc95-4a78-c8a7-5ec2da13d992"
       },
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +386,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 27
         }
       ]
     },
@@ -400,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DV2lXE8DPiAw",
-        "outputId": "e86842a9-f425-45c1-973b-47bc8e0b814e"
+        "outputId": "689c95fa-1330-4176-9dde-3ab1c4436594"
       },
-      "execution_count": 8,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 28
         }
       ]
     },
@@ -426,9 +426,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xn-bwkwTPotx",
-        "outputId": "d08af026-06f9-4805-b3d2-772899529017"
+        "outputId": "156870f9-9179-4289-e4c1-6fd105802052"
       },
-      "execution_count": 9,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +438,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 29
         }
       ]
     },
@@ -472,9 +472,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6ulzdIAsZ3ng",
-        "outputId": "dd377d92-df02-401c-d639-0718528513e3"
+        "outputId": "d13ba27f-6a87-4887-f80b-45f08032449d"
       },
-      "execution_count": 10,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +493,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 30
         }
       ]
     },
@@ -507,9 +507,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FXsz4YJdaYM8",
-        "outputId": "7ba008a5-698c-42ff-f1b3-c53e69bb281a"
+        "outputId": "6aee44b3-715d-4bdc-c38f-3f63987f6c7f"
       },
-      "execution_count": 11,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +528,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 31
         }
       ]
     },
@@ -543,9 +543,9 @@
           "height": 599
         },
         "id": "Jffip9CLcTgU",
-        "outputId": "ee11a514-b0d1-4130-912c-45467db70c2d"
+        "outputId": "314bb22d-f6da-4495-a4f5-1ee7a48328e1"
       },
-      "execution_count": 12,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
@@ -589,9 +589,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C1mfNfpii46I",
-        "outputId": "a38ba849-b7f0-4d10-8f1f-e7a25096d68e"
+        "outputId": "464ad6f9-1f31-41af-9746-64400c1726f6"
       },
-      "execution_count": 13,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,7 +604,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 33
         }
       ]
     },
@@ -618,9 +618,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "21838d58-c811-443a-d5f3-16d8fe663965"
+        "outputId": "bc8c8529-d455-4b5b-853d-fafa24e16faa"
       },
-      "execution_count": 14,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +630,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 34
         }
       ]
     },
@@ -641,12 +641,12 @@
         "#loss function setup\n",
         "loss_fn = nn.L1Loss()\n",
         "#Optimizing function setup\n",
-        "Optimizer = torch.optim.SGD(params = model_0.parameters(), lr=0.01)"
+        "optimizer = torch.optim.SGD(params = model_0.parameters(), lr=0.01)"
       ],
       "metadata": {
         "id": "qFrmoz3nr0I_"
       },
-      "execution_count": 15,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -685,9 +685,9 @@
         "  model_0.train()\n",
         "\n",
         "  #1. Forward pass\n",
-        "  y_pred = model_0(X_train)\n",
+        "  y_pred = model_0(X_training)\n",
         "  #2. loss Calculation\n",
-        "  loss = loss_fn(y_pred, y_train)\n",
+        "  loss = loss_fn(y_pred, y_training)\n",
         "  #3. Optimize zero grad\n",
         "  optimizer.zero_grad()\n",
         "  #4. Back Propagation\n",
@@ -698,27 +698,10 @@
         "  model_0.eval()"
       ],
       "metadata": {
-        "id": "2-svv9d33Unc",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
-        },
-        "outputId": "e88df4c5-2d01-4cac-92ef-f7669d44a40d"
+        "id": "2-svv9d33Unc"
       },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-db266446dd5d>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;31m#1. Forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m   \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m   \u001b[0;31m#2. loss Calculation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 36,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -726,7 +709,7 @@
       "metadata": {
         "id": "2RoOQ21igF2O"
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     }
   ]
