Saving the model in pyTorch

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOAjQWkI5NRXhVWblygsXVZ",
+      "authorship_tag": "ABX9TyMQqIoxa4UDFaIPo50aYB2G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
         "id": "q5d0xdVfz8rK",
         "outputId": "75a16ad5-fc2f-44a5-f8a7-5d26fafb05a2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
         "id": "Vumodyco1mzU",
         "outputId": "7e83b23c-8f5f-435a-b87d-3d4902261275"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +170,7 @@
         "id": "HLWAPGlp7N5Q",
         "outputId": "c3e3dae7-7ca3-421e-8c7b-6a8ebdbb8862"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +202,7 @@
         },
         "outputId": "e98d8922-38e1-458b-8fe7-33e785953e7a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +249,7 @@
         },
         "outputId": "e0d6ffa1-8893-46f9-e420-0d135bf27981"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -299,7 +299,7 @@
       "metadata": {
         "id": "GGSHzSEqzsmV"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +373,7 @@
         "id": "mvty8noPMPlj",
         "outputId": "057f7a70-a78b-4cca-80d3-8b475f510c44"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,7 +402,7 @@
         "id": "DV2lXE8DPiAw",
         "outputId": "470b0c01-93f5-45c1-f1f1-db5d257d3597"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +428,7 @@
         "id": "Xn-bwkwTPotx",
         "outputId": "919d49dc-7bee-404b-a1e6-ed8a0024676c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +474,7 @@
         "id": "6ulzdIAsZ3ng",
         "outputId": "e1d13a43-66c0-41ba-8249-bc952d100e55"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +509,7 @@
         "id": "FXsz4YJdaYM8",
         "outputId": "9a6e8845-2e7a-4d04-a24a-93722c358912"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +545,7 @@
         "id": "Jffip9CLcTgU",
         "outputId": "86972e8b-f82d-4d4e-b768-270f31a4d321"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -591,7 +591,7 @@
         "id": "C1mfNfpii46I",
         "outputId": "9756b5d8-ae1e-4d37-ad7c-b80bf506b6dd"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +620,7 @@
         },
         "outputId": "05dbfbe1-3467-458d-f41e-0b40150f0fcb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +646,7 @@
       "metadata": {
         "id": "qFrmoz3nr0I_"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -730,7 +730,7 @@
         },
         "outputId": "e805e554-98d2-44a7-814d-172d98299018"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -772,7 +772,7 @@
         "id": "_pSfU7TyCX9Q",
         "outputId": "af2d0668-d0c3-494d-97a9-d2e278ac7bd1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -800,7 +800,7 @@
         "id": "BeNJ7HDmZIgL",
         "outputId": "c93be1b8-a5e9-4a56-ce22-30d37f6e9f9a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -847,7 +847,7 @@
         "id": "TrnmiOXvZG6P",
         "outputId": "677f2ff5-ae52-4d75-8397-37f4857719c3"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -885,7 +885,7 @@
         "id": "fhJ0N3DsC9oN",
         "outputId": "3e938966-813b-4189-9f2d-2353049007c3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -920,7 +920,7 @@
         "id": "ugIQx_Y5HtXA",
         "outputId": "706f3491-e605-4bb3-a6ba-5f937a25ecba"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -947,7 +947,7 @@
         "id": "qFekJJXjHv38",
         "outputId": "9baf5eac-915c-4635-bbd8-5a6cbe42d26b"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -974,7 +974,7 @@
         "id": "abplF742IBPW",
         "outputId": "44db73a0-c87d-4478-c7d4-9715254e80c5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -989,32 +989,16 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "torch.save()"
+        "###Saving the model in Pytorch\n",
+        "* torch.save() #To save the pyTorch model in Pickle Format\n",
+        "* torch.load() # To load the model that is saved\n",
+        "* torch.nn.Module.load_state_dict() #this allows to save the model's saved state directory"
       ],
       "metadata": {
-        "id": "gJiEZBNHIVfd",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        },
-        "outputId": "704921e8-9258-4009-ce00-afd184a2c4ad"
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-b888864d8df0>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: save() missing 2 required positional arguments: 'obj' and 'f'"
-          ]
-        }
-      ]
+        "id": "gJiEZBNHIVfd"
+      }
     },
     {
       "cell_type": "code",
