Saving and Loading Models

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMQqIoxa4UDFaIPo50aYB2G",
+      "authorship_tag": "ABX9TyML8yEp3ox6DVnJ3w4MoIyJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1002,7 +1002,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Saving Our PyTorch Model\n",
+        "from pathlib import Path\n",
+        "\n",
+        "#1. Create model directory\n",
+        "MODEL_PATH = Path('models')\n",
+        "\n",
+        "MODEL_PATH.mkdir(parents=True, exist_ok= True)\n",
+        "\n",
+        "#2. Create Model save Path\n",
+        "MODEL_NAME=\"01_Pytorch_model_workflow_01.path\""
+      ],
       "metadata": {
         "id": "XyFa7T6KprIx"
       },
