--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyML8yEp3ox6DVnJ3w4MoIyJ",
+      "authorship_tag": "ABX9TyOmCLknOqG80jfG/dHl945K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1012,7 +1012,12 @@
         "MODEL_PATH.mkdir(parents=True, exist_ok= True)\n",
         "\n",
         "#2. Create Model save Path\n",
-        "MODEL_NAME=\"01_Pytorch_model_workflow_01.path\""
+        "MODEL_NAME=\"01_Pytorch_model_workflow_01.pth\"\n",
+        "\n",
+        "MODEL_SAVE_PATH =MODEL_PATH/MODEL_NAME\n",
+        "\n",
+        "MODEL_SAVE_PATH\n",
+        "\n"
       ],
       "metadata": {
         "id": "XyFa7T6KprIx"
