Putting Everything Together

--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPIy/ha4BeAF0blPaP3Mtgm",
+      "authorship_tag": "ABX9TyMN0yGQfjptHEGynJqKJHEA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,9 +65,9 @@
           "height": 35
         },
         "id": "q5d0xdVfz8rK",
-        "outputId": "c4cbe145-0b98-4289-97e1-fa4f7f169981"
+        "outputId": "8bd8dfb3-07d0-421c-bbd0-93f9423d205d"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -80,7 +80,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ]
     },
@@ -123,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vumodyco1mzU",
-        "outputId": "42142c0e-bf6d-4686-c05a-be948f2bcb2f"
+        "outputId": "f897425f-0775-44b4-c9a4-790bc0d76eee"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -154,7 +154,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -168,9 +168,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HLWAPGlp7N5Q",
-        "outputId": "31469e9b-3cba-42af-8d49-8251ae694e02"
+        "outputId": "2ac989f6-0ceb-4310-e70f-698c5c5ae7c0"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +180,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -200,9 +200,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b757422a-ddea-4c14-d29a-5cafdec84ddb"
+        "outputId": "6d13f2df-f666-4a5c-c87f-cefdd6ed5a33"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,7 +212,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 599
         },
-        "outputId": "f09cb06c-46e4-4226-ab5d-bd04bf58fe3f"
+        "outputId": "277b057c-6f27-4755-e03d-c375ed9f7171"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -299,7 +299,7 @@
       "metadata": {
         "id": "GGSHzSEqzsmV"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -371,9 +371,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mvty8noPMPlj",
-        "outputId": "abeccf35-4aae-4f49-c679-fa9720755bbb"
+        "outputId": "2c6cae7e-4538-4619-f30b-0272c92b264c"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +386,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -400,9 +400,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DV2lXE8DPiAw",
-        "outputId": "c1bf403b-3aca-41d4-a89d-818fa4c18fd2"
+        "outputId": "c72069c3-df4e-4aa9-ab7e-48032f5128a5"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -426,9 +426,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xn-bwkwTPotx",
-        "outputId": "8758441d-7682-4892-cfeb-bc9573a9a130"
+        "outputId": "d86b50dc-241f-4887-e54d-8e8d7c264b12"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +438,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -472,9 +472,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6ulzdIAsZ3ng",
-        "outputId": "945cf6ae-0b76-448a-8d80-2073816b7bdd"
+        "outputId": "d1fb61d7-40cd-4565-fa4a-576deffda220"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +493,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -507,9 +507,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FXsz4YJdaYM8",
-        "outputId": "9ee75a79-ae41-45b2-b943-c97270002b79"
+        "outputId": "0cfdb952-a4b9-4d05-e8bc-6e8497154ff9"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,7 +528,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
         }
       ]
     },
@@ -543,9 +543,9 @@
           "height": 599
         },
         "id": "Jffip9CLcTgU",
-        "outputId": "256ef220-b0be-4a38-a298-24403da0e5f6"
+        "outputId": "b028605f-d520-4ec3-8501-25791ce4c4b9"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -589,9 +589,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C1mfNfpii46I",
-        "outputId": "1c6bc020-4356-4b74-fef0-8255db21bc6f"
+        "outputId": "545e8560-9909-410d-a15a-db99507ebd51"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,7 +604,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     },
@@ -618,9 +618,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cf3a9cc7-51c6-4a3e-fa04-4310ba9d068d"
+        "outputId": "66f27c14-8bd9-4ae3-8451-1af45f4f4bb5"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,7 +630,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 14
         }
       ]
     },
@@ -646,7 +646,7 @@
       "metadata": {
         "id": "qFrmoz3nr0I_"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -728,9 +728,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eaa512fd-d193-4731-d359-9f0b416023e5"
+        "outputId": "83d26632-32ea-462b-8bf4-459ff7b6eeea"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,9 +770,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_pSfU7TyCX9Q",
-        "outputId": "1366785b-4609-439e-debb-7203cc9c423b"
+        "outputId": "baa23a04-96d1-48ea-92dd-c79d162b6303"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +782,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 17
         }
       ]
     },
@@ -798,9 +798,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BeNJ7HDmZIgL",
-        "outputId": "72117bdb-620e-4e5c-b622-397da26d366f"
+        "outputId": "b09b3360-04e0-4e3d-bf7b-71bba4077136"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -823,7 +823,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 18
         }
       ]
     },
@@ -845,19 +845,19 @@
           "height": 469
         },
         "id": "TrnmiOXvZG6P",
-        "outputId": "ccbcca02-d9b4-48d2-9272-f2a5594c0289"
+        "outputId": "ca1284e0-622b-4359-88f0-f81653591f9b"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x7b19f0bde020>"
+              "<matplotlib.legend.Legend at 0x7913e7677a30>"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 19
         },
         {
           "output_type": "display_data",
@@ -883,9 +883,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fhJ0N3DsC9oN",
-        "outputId": "a4df41d6-35b9-4c6a-d5d1-669647c793ee"
+        "outputId": "75968e65-8087-495a-df0f-9f58c6fca896"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -904,7 +904,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 20
         }
       ]
     },
@@ -918,9 +918,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ugIQx_Y5HtXA",
-        "outputId": "9ed17dfc-5e49-4a0c-ae5e-d5c91a60930a"
+        "outputId": "fa29c6e6-d5b3-49ba-e80c-cc178d9ecb6b"
       },
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +930,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 21
         }
       ]
     },
@@ -945,9 +945,9 @@
           "height": 599
         },
         "id": "qFekJJXjHv38",
-        "outputId": "89e672ba-3409-4e81-f68d-1695fceac017"
+        "outputId": "fc492455-e9fc-4ae0-c97d-f3461a923e31"
       },
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -972,9 +972,9 @@
           "height": 599
         },
         "id": "abplF742IBPW",
-        "outputId": "83f4358a-9cd3-4773-f61a-dc10e268e95d"
+        "outputId": "392f3674-1df5-4c4c-9de2-18ab1e3227cb"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1025,9 +1025,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5ae06543-e97a-4cc6-dd17-03f5b2707493"
+        "outputId": "24aa8eb2-66d5-432b-8691-fa7499dafe3c"
       },
-      "execution_count": 25,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1048,7 +1048,32 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BWIEFxr8WndX",
-        "outputId": "272b44c9-811d-46b3-abb3-2c5678b1fa2f"
+        "outputId": "8a122576-9f78-49df-f539-d727a26daaea"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 4\n",
+            "-rw-r--r-- 1 root root 1851 Oct  5 02:20 01_Pytorch_model_workflow_01.pth\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "print(f\" The selected device is: {device}\")"
+      ],
+      "metadata": {
+        "id": "AArAxIY9W-x2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dfd46563-e376-4764-ba93-473f0ccd2bcc"
       },
       "execution_count": 26,
       "outputs": [
@@ -1056,20 +1081,19 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "total 4\n",
-            "-rw-r--r-- 1 root root 1851 Oct  4 01:44 01_Pytorch_model_workflow_01.pth\n"
+            " The selected device is: cuda\n"
           ]
         }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "DATA"
+      ],
       "metadata": {
-        "id": "AArAxIY9W-x2"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "5953T1MUpDN3"
+      }
     }
   ]
 }
